--- a/05-maquetacion/index.html
+++ b/05-maquetacion/index.html
@@ -17,7 +17,7 @@
                 <div class="play"></div>
             </div>
             
-            <h1>MisPelis</h1>
+            <h1>Películas</h1>
         </header>
 
         <!--Barra de navegación-->
@@ -90,7 +90,7 @@
 
         <!--Pie de página-->
         <footer class="footer">
-            &copy; Máster en React - <a href="https://victorroblesweb.es">victorroblesweb.es</a>
+            &copy; Máster en React - <a href="https://gironastudio.es">Girona Studio</a>
         </footer>
 
     </div>
